--- a/app/index.html
+++ b/app/index.html
@@ -17,12 +17,15 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
-</head>
-<body>
+  </head>
+  <body ng-controller="PhoneListCtrl">
 
-  <div class="view-container">
-    <div ng-view class="view-frame"></div>
-  </div>
+    <ul>
+      <li ng-repeat="phone in phones">
+        <span>{{phone.name}}</span>
+        <p>{{phone.snippet}}</p>
+      </li>
+    </ul>
 
 </body>
 </html>
