--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,29 @@
   </head>
   <body ng-controller="PhoneListCtrl">
 
-    <ul>
-      <li ng-repeat="phone in phones">
-        <span>{{phone.name}}</span>
-        <p>{{phone.snippet}}</p>
-      </li>
-    </ul>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+          <!--Sidebar content-->
+
+          Search: <input ng-model="query">
+          Sort by:
+          <select ng-model="orderProp">
+            <option value="name">Alphabetical</option>
+            <option value="age">Newest</option>
+          </select>
+
+
+          <ul class="phones">
+            <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+              <span>{{phone.name}}</span>
+              <p>{{phone.snippet}}</p>
+            </li>
+          </ul>
+          
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
